workloads/wireguard/kustomize/overlays/admin/svc-patch.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: wireguard-admin-svc

  labels:
    app.kubernetes.io/name: wireguard-admin-svc
